--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <!-- HTML -->
     <div class="container">
         <div class="header">
-            <h1>🌸 شات البنات 🌸</h1>
+            <h1>🌸 شات إيناس 🌸</h1>
         </div>
         
         <div class="chat-container" id="chatContainer"></div>
